Fix for documents in IE to allow uploads. Adding the ability to collapse and save as collapsed portlets

--- a/public/stylesheets/redesign/dashboard.css
+++ b/public/stylesheets/redesign/dashboard.css
@@ -39,7 +39,7 @@
   display: none;
 }
 
-.portlet.user-mode .x-tool-refresh{
+.portlet.user-mode .x-tool-refresh, .portlet.user-mode .x-tool-toggle{
   display: block;
 }
 
